Adjust layout to prevent overflow on narrower devices

--- a/packages/frontend/src/features/Header/components/Navigation/index.module.css
+++ b/packages/frontend/src/features/Header/components/Navigation/index.module.css
@@ -12,6 +12,10 @@
     @media (max-width: $mantine-breakpoint-lg) {
         grid-template-columns: auto auto 1fr;
     }
+
+    @media (max-width: $mantine-breakpoint-xs) {
+        gap: 6px 12px;
+    }
 }
 
 .burger {
@@ -39,6 +43,10 @@
 
     @media (max-width: $mantine-breakpoint-lg) {
         grid-area: 1 / 3 / -1 / -1;
+    }
+
+    @media (max-width: $mantine-breakpoint-xs) {
+        gap: 6px;
     }
 }
 
